--- a/WebApp/Views/Shared/_BaseLayout.cshtml
+++ b/WebApp/Views/Shared/_BaseLayout.cshtml
@@ -8,7 +8,7 @@
     @Styles.Render("~/bundles/css")
     @Scripts.Render("~/bundles/script")
 </head>
-<body ng-app="app">
+<body ng-app="app" class="grey lighten-5">
 
     @RenderBody()
 
