--- a/WebApp/Views/Shared/pv_NavbarAnonimo.cshtml
+++ b/WebApp/Views/Shared/pv_NavbarAnonimo.cshtml
@@ -1,9 +1,9 @@
 ﻿<nav>
-    <div class="nav-wrapper">
-        <a href="#" class="brand-logo">Logo</a>
+    <div class="nav-wrapper blue accent-1">
+        <a href="#" class="brand-logo">Ayudando en la pandemia</a>
         <ul id="nav-mobile" class="right hide-on-med-and-down">
-            <li><a href="sass.html">Sass</a></li>
-            <li><a href="badges.html">Components</a></li>
+            <li><a href="sass.html">INICIAR SESION</a></li>
+            <li><a href="badges.html">REGISTRARSE</a></li>
         </ul>
     </div>
 </nav>
