--- a/WebApp/Views/Shared/pv_Footer.cshtml
+++ b/WebApp/Views/Shared/pv_Footer.cshtml
@@ -4,9 +4,25 @@
     "Esther Alifraco",
     "Natalia Cipollino",
     "Maidana Pablo"
-                };
+    };
 
     string nroGrupo = "1";
 
     int cantIntegrante = 0;
 }
+
+    <footer class="page-footer blue accent-1">
+        <div class="container">
+            <div class="row">
+                <div class="col l6 s12">
+                    <h5 class="white-text">Integrantes</h5>
+                    <p class="grey-text text-lighten-4">You can use rows and columns here to organize your footer content.</p>
+                </div>
+            </div>
+        </div>
+        <div class="footer-copyright">
+            <div class="container">
+                © 2020 Copyright Text
+            </div>
+        </div>
+    </footer>
