instalacion de bootstrap-vue

--- a/WebApp/Views/Shared/_AnonimoLayout.cshtml
+++ b/WebApp/Views/Shared/_AnonimoLayout.cshtml
@@ -1,6 +1,6 @@
 ﻿
 @{
-    ViewBag.Title = "_AnonimoLayout";
+    ViewBag.Title = "Ayudando en la Pandemia";
     Layout = "~/Views/Shared/_BaseLayout.cshtml";
 }
 
