--- a/WebApp/Views/Shared/_BaseLayout.cshtml
+++ b/WebApp/Views/Shared/_BaseLayout.cshtml
@@ -7,6 +7,8 @@
     <title>@ViewBag.Title</title>
     @Styles.Render("~/bundles/css")
     @Scripts.Render("~/bundles/script")
+    <link href="~/Images/favicon.png" rel="icon" />
+    
 </head>
 <body ng-app="app" class="grey lighten-5">
 
