Inicio de componente navbar

--- a/WebApp/Views/Shared/pv_NavbarAnonimo.cshtml
+++ b/WebApp/Views/Shared/pv_NavbarAnonimo.cshtml
@@ -1,10 +1,2 @@
-﻿<nav>
-    <div class="nav-wrapper blue accent-1">
-        <a href="#" class="brand-logo">Ayudando en la pandemia</a>
-        <ul id="nav-mobile" class="right hide-on-med-and-down">
-            <li><a href="sass.html">INICIAR SESION</a></li>
-            <li><a href="badges.html">REGISTRARSE</a></li>
-        </ul>
-    </div>
-</nav>
+﻿<navbar></navbar>
 
