--- a/WebApp/Views/Shared/_BaseLayout.cshtml
+++ b/WebApp/Views/Shared/_BaseLayout.cshtml
@@ -3,14 +3,14 @@
 <html>
 <head>
     <meta charset="utf-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <title>@ViewBag.Title</title>
     @Styles.Render("~/bundles/css")
     @Scripts.Render("~/bundles/script")
     <link href="~/Images/favicon.png" rel="icon" />
-    
+
 </head>
-<body ng-app="app" class="grey lighten-5">
+<body ng-app="app">
 
     @RenderBody()
 
