--- a/WebApp/Views/Shared/pv_Footer.cshtml
+++ b/WebApp/Views/Shared/pv_Footer.cshtml
@@ -8,13 +8,13 @@
 
     string nroGrupo = "1";
 
-    int cantIntegrante = 0;
+
 }
 
     <footer class="page-footer blue accent-1">
         <div class="container">
             <div class="row">
-                <div class="col l6 s12">
+                <div class="col col-lg-6 col-sm-12">
                     <h5 class="white-text">Integrantes</h5>
                     <p class="grey-text text-lighten-4">You can use rows and columns here to organize your footer content.</p>
                 </div>
