--- a/WebApp/Views/Shared/_BaseLayout.cshtml
+++ b/WebApp/Views/Shared/_BaseLayout.cshtml
@@ -8,6 +8,7 @@
     @Styles.Render("~/bundles/css")
     @Scripts.Render("~/bundles/script")
     <link href="~/Images/favicon.png" rel="icon" />
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 
 </head>
 <body ng-app="app">
