--- a/WebApp/Views/Home/Registrarse.cshtml
+++ b/WebApp/Views/Home/Registrarse.cshtml
@@ -4,5 +4,42 @@
     Layout = "~/Views/Shared/_AnonimoLayout.cshtml";
 }
 
-<h2>Registrarse</h2>
+
+<div class="row">
+    <form class="col s6">
+        <div class="row">
+            <span class="titulo-inicio blue-text accent-3 center">
+                <h5>REGISTRARSE</h5>
+            </span>
+            <hr />
+        </div>
+        <div class="row">
+            <div class="input-field col s12">
+                <i class="material-icons prefix">email</i>
+                <input id="icon_email" type="text" class="validate">
+                <label for="icon_email">Email</label>
+            </div>
+            <div class="input-field col s12">
+                <i class="material-icons prefix">vpn_key</i>
+                <input id="icon_vpn_key" type="password" class="validate">
+                <label for="icon_vpn_key">Password</label>
+            </div>
+            <div class="input-field col s12">
+                <i class="material-icons prefix">vpn_key</i>
+                <input id="icon_vpn_key_copy" type="password" class="validate">
+                <label for="icon_vpn_key_copy">Repita password</label>
+            </div>
+            <div class="input-field col s12">
+                <i class="material-icons prefix">date_range</i>
+                <input id="icon_date_range" type="password" class="validate">
+                <label for="icon_date_range">Fecha de nacimiento</label>
+            </div>
+            <div class="input-field col s12">
+                <button class="btn waves-effect waves-light col s12 blue darken-3" type="submit" name="action">
+                    CREAR
+                </button>
+            </div>
+        </div>
+    </form>
+</div>
 
