--- a/WebApp/Views/Home/pv_Info.cshtml
+++ b/WebApp/Views/Home/pv_Info.cshtml
@@ -1,8 +1,8 @@
 ﻿<div class="row">
-    <div class="col s4 m4">
-        <div class="card-panel blue darken-3">
+    <div class="col s6 m6">
+        <div class="card blue darken-3">
             <div class="card-content">
-                <p>
+                <p class="center">
                     A traves de este sitio podra realizar
                     donaciones para las personas
                     afectadas con el virus covid-19
