--- a/WebApp/Content/site.css
+++ b/WebApp/Content/site.css
@@ -19,3 +19,24 @@ hr {
     margin-left: 12px;
     margin-right: 12px;
 }
+
+.progress {
+    min-height: 24px;
+    overflow: hidden;
+    position: relative;
+}
+
+.progress span {
+    position: relative;
+    float: left;
+    color: #fff;
+    padding: 4px;
+    z-index: 99999;
+}
+
+.progress .determinate {
+    position: relative;
+    padding: 4px;
+    text-align: right;
+    color: white;
+}
