Creacion de pv_Publicacion y pv_PublicacionMasValorada

--- a/WebApp/Views/Shared/pv_ProgressBar.cshtml
+++ b/WebApp/Views/Shared/pv_ProgressBar.cshtml
@@ -1,6 +1,4 @@
-﻿
-
-<div class="progress blue lighten-4">
+﻿<div class="progress blue lighten-4">
     <span>Aceptacion</span>
     <div class="determinate blue" style="width: 70%">
         70%
