--- a/WebApp/Content/site.css
+++ b/WebApp/Content/site.css
@@ -40,3 +40,24 @@ hr {
     text-align: right;
     color: white;
 }
+
+.horizontal .card-image .card-badge {
+    text-align: center;
+    padding: 0.2em 0;
+}
+
+.card-image .card-badge {
+    position: absolute;
+    bottom: 0px;
+    width: 100%;
+    text-align: left;
+    text-transform: uppercase;
+    font-size: 0.9em;
+    padding: 0.2em 24px 0.8em 24px;
+    color: #fff;
+    z-index: 2;
+}
+
+.card-image .card-title {
+    padding-bottom: 66px;
+}
