--- a/WebApp/Views/Home/pv_Publicacion.cshtml
+++ b/WebApp/Views/Home/pv_Publicacion.cshtml
@@ -1,17 +1,18 @@
-﻿<div class="row">
-    <div class="col s12 m6">
-        <div class="card blue-grey darken-1 right">
-            <div class="card-content white-text">
-                <span class="card-title">Card Title</span>
-                <p>
-                    I am a very simple card. I am good at containing small bits of information.
-                    I am convenient because I require little markup to use effectively.
-                </p>
-            </div>
-            <div class="card-action">
-                <a href="#">This is a link</a>
-                <a href="#">This is a link</a>
-            </div>
-        </div>
-    </div>
+﻿<div class="container">  
+	<div class="col s6 m6">
+		<div class="card horizontal">
+			<div class="card-image">
+				<img src="https://placehold.it/100x190">
+			</div>
+			<div class="card-stacked">
+                <div class="card-content">
+                    <span class="card-title">Card Title</span>
+                    <p>I am a very simple card. I am good at containing small bits of information.</p>
+                </div>
+				<div class="card-action">
+					<a href="#">This is a link</a>
+				</div>
+			</div>
+		</div>
+	</div>
 </div>
