Modificacion de Registrarse e Ingresar

--- a/WebApp/Content/site.css
+++ b/WebApp/Content/site.css
@@ -1,8 +1,4 @@
-﻿body {
-    color: white;
-}
-
-.brand-logo{
+﻿.brand-logo{
     margin-left: 1%;
 }
 
@@ -61,3 +57,4 @@ hr {
 .card-image .card-title {
     padding-bottom: 66px;
 }
+
