--- a/WebApp/Views/Home/Ingresar.cshtml
+++ b/WebApp/Views/Home/Ingresar.cshtml
@@ -7,9 +7,9 @@
 <div class="row">
     <form class="col s6">
         <div class="row">
-            <span class="titulo-inicio blue-text accent-3 center">
+            <div class="titulo-inicio blue-text accent-3 center">
                 <h5>INICIAR SESION</h5>
-            </span>
+            </div>
             <hr />
         </div>
         <div class="row">
