--- a/WebApp/Views/Home/Registrarse.cshtml
+++ b/WebApp/Views/Home/Registrarse.cshtml
@@ -8,9 +8,9 @@
 <div class="row">
     <form class="col s6">
         <div class="row">
-            <span class="titulo-inicio blue-text accent-3 center">
+            <div class="titulo-inicio blue-text accent-3 center">
                 <h5>REGISTRARSE</h5>
-            </span>
+            </div>
             <hr />
         </div>
         <div class="row">
@@ -31,7 +31,7 @@
             </div>
             <div class="input-field col s12">
                 <i class="material-icons prefix">date_range</i>
-                <input id="icon_date_range" type="password" class="validate">
+                <input id="icon_date_range" type="text" class="validate datepicker">
                 <label for="icon_date_range">Fecha de nacimiento</label>
             </div>
             <div class="input-field col s12">
@@ -43,3 +43,7 @@
     </form>
 </div>
 
+<script>
+   
+
+</script>
