--- a/WebApp/Views/Shared/_BaseLayout.cshtml
+++ b/WebApp/Views/Shared/_BaseLayout.cshtml
@@ -1,21 +1,21 @@
 ﻿@using System.Web.Optimization
 <!DOCTYPE html>
 <html>
-<head>
-    <meta charset="utf-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <title>@ViewBag.Title</title>
-    @Styles.Render("~/bundles/css")
-    @Scripts.Render("~/bundles/script")
-    <link href="~/Images/favicon.png" rel="icon" />
-    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+    <head>
+        <meta charset="utf-8" />
+        <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+        <title>@ViewBag.Title</title>
+        @Styles.Render("~/bundles/css")
+        @Scripts.Render("~/bundles/script")
+        <link href="~/Images/favicon.png" rel="icon" />
+        <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 
-</head>
-<body ng-app="app">
+    </head>
+    <body>
 
-    @RenderBody()
+        @RenderBody()
 
-    @Scripts.Render("~/bundles/footer")
+        @Scripts.Render("~/bundles/footer")
 
-</body>
+    </body>
 </html>
