Modificacion de Progress Bar

--- a/WebApp/Views/Shared/pv_ProgressBar.cshtml
+++ b/WebApp/Views/Shared/pv_ProgressBar.cshtml
@@ -1,6 +1,6 @@
-﻿<div class="progress blue lighten-4">
+﻿<div class="progress blue lighten-4" id="progressbar-background">
     <span>Aceptacion</span>
-    <div class="determinate blue" style="width: 70%">
+    <div class="determinate blue" id="progressbar-inner">
         70%
     </div>
 </div>
