Modificacion de Partial View Publicacion Mas valorada

--- a/WebApp/Views/Home/pv_PublicacionMasValorada.cshtml
+++ b/WebApp/Views/Home/pv_PublicacionMasValorada.cshtml
@@ -1,14 +1,13 @@
 ﻿<div class="row">
     <form class="col s6">
         <div class="row">
-            <span class="titulo-inicio blue-text accent-3 center">
+            <div class="titulo-inicio blue-text accent-3 center">
                 <h5>PUBLICAIONES MAS VALORADAS</h5>
-            </span>
+            </div>
             <hr />
         </div>
         <div class="row">
-
-            
+           @Html.Partial("pv_CardMasValorada")
         </div>
     </form>
 </div>
