--- a/WebApp/Views/Home/pv_CardMasValorada.cshtml
+++ b/WebApp/Views/Home/pv_CardMasValorada.cshtml
@@ -1,10 +1,13 @@
-﻿<div class="col s6 m6">
+﻿<div class="col m3">
     <div class="card horizontal light-blue darken-3 white-text">
         <div class="card-stacked">
             <div class="card-content">
                 <span class="card-title">TITULO DE PUBLICACION</span>
                 <p>Nombre de usuario</p>
                 <p>Fecha de creacion</p>
+                <div>
+                    @Html.Partial("pv_ProgressBar")
+                </div>
             </div>
             <div class="card-action">
                 <a class="white-text" href="#">Detalle</a>
