--- a/WebApp/Views/Home/pv_PublicacionMasValorada.cshtml
+++ b/WebApp/Views/Home/pv_PublicacionMasValorada.cshtml
@@ -1,5 +1,5 @@
 ﻿<div class="row">
-    <form class="col s6">
+    <form class="col m6">
         <div class="row">
             <div class="titulo-inicio blue-text accent-3 center">
                 <h5>PUBLICAIONES MAS VALORADAS</h5>
