--- a/WebApp/Content/lib/materialize/materialize.css
+++ b/WebApp/Content/lib/materialize/materialize.css
@@ -3430,8 +3430,8 @@ table span.badge {
 
 .container {
   margin: 0 auto;
-  max-width: 1280px;
-  width: 90%;
+  max-width: 1400px;
+  width: 100%;
 }
 
 @media only screen and (min-width: 601px) {
@@ -3442,8 +3442,14 @@ table span.badge {
 
 @media only screen and (min-width: 993px) {
   .container {
-    width: 70%;
+    width: 90%;
   }
+}
+
+@media only screen and (min-width: 1200px) {
+    .container {
+        width: 95%;
+    }
 }
 
 .col .row {
