--- a/WebApp/Views/Home/Inicio.cshtml
+++ b/WebApp/Views/Home/Inicio.cshtml
@@ -4,7 +4,12 @@
     Layout = "~/Views/Shared/_AnonimoLayout.cshtml";
 }
 
-<h2>Inicio</h2>
+    <div class="row">
+        <div class="col s12 m6">
+            @Html.Partial("pv_PublicacionMasValorada")
+        </div>
+        <div class="col s12 m6">
+            @Html.Partial("pv_Info")
+        </div>
+    </div>
 
-@Html.Partial("pv_PublicacionMasValorada")
-@Html.Partial("pv_Info")
