--- a/WebApp/Views/Home/pv_Info.cshtml
+++ b/WebApp/Views/Home/pv_Info.cshtml
@@ -1,17 +1,13 @@
-﻿<div class="row">
-    <div class="col s6 m6">
-        <div class="card blue darken-3">
-            <div class="card-content">
-                <p class="center">
-                    A traves de este sitio podra realizar
-                    donaciones para las personas
-                    afectadas con el virus covid-19
-                </p>
-            </div>
-            <div class="card-image">
-                <img src="~/Images/Inicio/Info.png">
-            </div>
-        </div>
+﻿
+<div class="card blue darken-3">
+    <div class="card-content">
+        <p class="center white-text">
+            A traves de este sitio podra realizar
+            donaciones para las personas
+            afectadas con el virus covid-19
+        </p>
+    </div>
+    <div class="card-image">
+        <img src="~/Images/Inicio/Info.png">
     </div>
 </div>
-
