--- a/WebApp/Views/Home/pv_PublicacionMasValorada.cshtml
+++ b/WebApp/Views/Home/pv_PublicacionMasValorada.cshtml
@@ -1,8 +1,8 @@
 ﻿<div class="row">
-    <form class="col m6">
+    <form class="col m12">
         <div class="row">
             <div class="titulo-inicio blue-text accent-3 center">
-                <h5>PUBLICAIONES MAS VALORADAS</h5>
+                <h5>PUBLICACIONES MAS VALORADAS</h5>
             </div>
             <hr />
         </div>
