--- a/WebApp/Views/Home/pv_CardMasValorada.cshtml
+++ b/WebApp/Views/Home/pv_CardMasValorada.cshtml
@@ -2,19 +2,19 @@
     <div class="card horizontal light-blue darken-3 white-text">
         <div class="card-stacked">
             <div class="card-content">
-                <span class="card-title">TITULO DE PUBLICACION</span>
+                <h6>TITULO DE PUBLICACION</h6>
                 <p>Nombre de usuario</p>
                 <p>Fecha de creacion</p>
-                <div>
+                <p>
                     @Html.Partial("pv_ProgressBar")
-                </div>
+                </p>
             </div>
-            <div class="card-action">
+            <div class="card-action right-align">
                 <a class="white-text" href="#">Detalle</a>
             </div>
         </div>
         <div class="card-image">
-            <img src="https://placehold.it/100x190" />
+            <img src="https://placehold.it/100x164" />
         </div>
     </div>
 </div>
