--- a/WebApp/Views/Home/pv_Info.cshtml
+++ b/WebApp/Views/Home/pv_Info.cshtml
@@ -1,5 +1,5 @@
 ﻿
-<div class="card blue darken-3">
+<div class="card blue darken-3" id="info">
     <div class="card-content">
         <p class="center white-text">
             A traves de este sitio podra realizar
@@ -7,7 +7,7 @@
             afectadas con el virus covid-19
         </p>
     </div>
-    <div class="card-image">
+    <div class="info-img">
         <img src="~/Images/Inicio/Info.png">
     </div>
 </div>
