--- a/WebApp/Views/Shared/pv_NavbarAnonimo.cshtml
+++ b/WebApp/Views/Shared/pv_NavbarAnonimo.cshtml
@@ -1,6 +1,6 @@
 ﻿<nav>
     <div class="nav-wrapper blue accent-1">
-        <a href="#" class="brand-logo">AYUDANDO</a>
+        <a href="/Home/Inicio" class="brand-logo">AYUDANDO</a>
         <ul id="nav-mobile" class="right hide-on-med-and-down">
             <li><a href="/Home/Ingresar">INICIAR SESION</a></li>
             <li><a href="/Home/Registrarse">REGISTRARSE</a></li>
