--- a/WebApp/Views/Shared/pv_ProgressBar.cshtml
+++ b/WebApp/Views/Shared/pv_ProgressBar.cshtml
@@ -1,5 +1,3 @@
 ﻿<div class="progress blue lighten-4" id="progressbar-background">
-    <span>Aceptacion</span>
-    <div class="determinate blue" id="progressbar-inner">     
-    </div>
+    <div class="determinate blue" id="progressbar-inner">50%</div>
 </div>
