--- a/WebApp/Views/Home/pv_PublicacionMasValorada.cshtml
+++ b/WebApp/Views/Home/pv_PublicacionMasValorada.cshtml
@@ -1,5 +1,5 @@
 ﻿<div class="row">
-    <form class="col m12">
+    <div class="col m12">
         <div class="row">
             <div class="titulo-inicio blue-text accent-3 center">
                 <h5>PUBLICACIONES MAS VALORADAS</h5>
@@ -7,7 +7,11 @@
             <hr />
         </div>
         <div class="row">
-           @Html.Partial("pv_CardMasValorada")
+            @Html.Partial("pv_CardMasValorada")
+            @Html.Partial("pv_CardMasValorada")
+            @Html.Partial("pv_CardMasValorada")
+            @Html.Partial("pv_CardMasValorada")
+            @Html.Partial("pv_CardMasValorada")
         </div>
-    </form>
+    </div>
 </div>
