Nav: accion Iniciar Sesion y Registrarse

--- a/WebApp/Views/Home/pv_Info.cshtml
+++ b/WebApp/Views/Home/pv_Info.cshtml
@@ -1,5 +1,4 @@
-﻿
-<div class="card blue darken-3" id="info">
+﻿<div class="card blue darken-3" id="info">
     <div class="card-content">
         <p class="center white-text">
             A traves de este sitio podra realizar
