--- a/WebApp/Views/Shared/pv_NavbarAnonimo.cshtml
+++ b/WebApp/Views/Shared/pv_NavbarAnonimo.cshtml
@@ -2,8 +2,8 @@
     <div class="nav-wrapper blue accent-1">
         <a href="/Home/Inicio" class="brand-logo">AYUDANDO</a>
         <ul id="nav-mobile" class="right hide-on-med-and-down">
-            <li><a href="/Home/Ingresar">INICIAR SESION</a></li>
-            <li><a href="/Home/Registrarse">REGISTRARSE</a></li>
+            <li><a href="/Home/Inicio/Ingresar" id="btnIngresar">INICIAR SESION</a></li>
+            <li><a href="/Home/Inicio/Registrarse" id="btnRegistrarse">REGISTRARSE</a></li>
         </ul>
     </div>
 </nav>
