--- a/WebApp/Views/Home/pv_Ingresar.cshtml
+++ b/WebApp/Views/Home/pv_Ingresar.cshtml
@@ -1,11 +1,5 @@
-﻿
-@{
-    ViewBag.Title = "Ingresar";
-    Layout = "~/Views/Shared/_AnonimoLayout.cshtml";
-}
-
-<div class="row">
-    <form class="col s6">
+﻿<div class="row">
+    <form class="col s12 m11 l11">
         <div class="row">
             <div class="titulo-inicio blue-text accent-3 center">
                 <h5>INICIAR SESION</h5>
