--- a/WebApp/Views/Home/pv_Registrarse.cshtml
+++ b/WebApp/Views/Home/pv_Registrarse.cshtml
@@ -1,12 +1,5 @@
-﻿
-@{
-    ViewBag.Title = "Registrarse";
-    Layout = "~/Views/Shared/_AnonimoLayout.cshtml";
-}
-
-
-<div class="row">
-    <form class="col s6">
+﻿<div class="row">
+    <form class="col s12 m11 l11">
         <div class="row">
             <div class="titulo-inicio blue-text accent-3 center">
                 <h5>REGISTRARSE</h5>
@@ -14,27 +7,27 @@
             <hr />
         </div>
         <div class="row">
-            <div class="input-field col s12">
+            <div class="input-field col s12 m12 l12">
                 <i class="material-icons prefix">email</i>
                 <input id="icon_email" type="text" class="validate">
                 <label for="icon_email">Email</label>
             </div>
-            <div class="input-field col s12">
+            <div class="input-field col s12 m12 l12">
                 <i class="material-icons prefix">vpn_key</i>
                 <input id="icon_vpn_key" type="password" class="validate">
                 <label for="icon_vpn_key">Password</label>
             </div>
-            <div class="input-field col s12">
+            <div class="input-field col s12 m12 l12">
                 <i class="material-icons prefix">vpn_key</i>
                 <input id="icon_vpn_key_copy" type="password" class="validate">
                 <label for="icon_vpn_key_copy">Repita password</label>
             </div>
-            <div class="input-field col s12">
+            <div class="input-field col s12 m12 l12">
                 <i class="material-icons prefix">date_range</i>
                 <input id="icon_date_range" type="text" class="validate datepicker">
                 <label for="icon_date_range">Fecha de nacimiento</label>
             </div>
-            <div class="input-field col s12">
+            <div class="input-field col s12 m12 l12">
                 <button class="btn waves-effect waves-light col s12 blue darken-3" type="submit" name="action">
                     CREAR
                 </button>
@@ -42,8 +35,3 @@
         </div>
     </form>
 </div>
-
-<script>
-   
-
-</script>
