Nav: accion Iniciar Sesion y Registrarse con JQUERY

--- a/WebApp/Views/Home/pv_Registrarse.cshtml
+++ b/WebApp/Views/Home/pv_Registrarse.cshtml
@@ -1,6 +1,6 @@
 ﻿<div class="row">
     <form class="col s12 m11 l11">
-        <div class="row">
+        <div class="row titulo-action">
             <div class="titulo-inicio blue-text accent-3 center">
                 <h5>REGISTRARSE</h5>
             </div>
@@ -28,7 +28,7 @@
                 <label for="icon_date_range">Fecha de nacimiento</label>
             </div>
             <div class="input-field col s12 m12 l12">
-                <button class="btn waves-effect waves-light col s12 blue darken-3" type="submit" name="action">
+                <button class="btn waves-effect waves-light col s12 blue darken-3 btn-action" type="submit" name="action">
                     CREAR
                 </button>
             </div>
