--- a/WebApp/Views/Home/Inicio.cshtml
+++ b/WebApp/Views/Home/Inicio.cshtml
@@ -5,22 +5,8 @@
 }
 
 <div class="row">
-    <div class="col s12 m8" id="#action">
-        @{
-            switch (ViewBag.Action)
-            {
-                case "Ingresar":
-                    @Html.Partial("pv_Ingresar")
-                    break;
-                case "Registrarse":
-                    @Html.Partial("pv_Registrarse")
-                    break;
-
-                default:
-                    @Html.Partial("pv_PublicacionMasValorada")
-                    break;
-            }
-        }
+    <div class="col s12 m8 action" id="action">      
+        @Html.Partial("pv_PublicacionMasValorada")       
     </div>
     <div class="col s12 m4">
         @Html.Partial("pv_Info")
