--- a/WebApp/Views/Home/pv_CardMasValorada.cshtml
+++ b/WebApp/Views/Home/pv_CardMasValorada.cshtml
@@ -1,4 +1,4 @@
-﻿<div class="col m6">
+﻿<div class="col s12 m6 l6">
     <div class="card horizontal light-blue darken-3 white-text">
         <div class="card-stacked">
             <div class="card-content">
