--- a/WebApp/Views/Home/pv_Ingresar.cshtml
+++ b/WebApp/Views/Home/pv_Ingresar.cshtml
@@ -1,27 +1,25 @@
-﻿<div class="row">
-    <form class="col s12 m11 l11">
-        <div class="row">
-            <div class="titulo-inicio blue-text accent-3 center">
-                <h5>INICIAR SESION</h5>
-            </div>
-            <hr />
+﻿<div class="col s12 m11 l11">
+    <div class="row titulo-action">
+        <div class="titulo-inicio blue-text accent-3 center">
+            <h5>INICIAR SESION</h5>
         </div>
-        <div class="row">
-            <div class="input-field col s12">
-                <i class="material-icons prefix">email</i>
-                <input id="icon_email" type="text" class="validate">
-                <label for="icon_email">Email</label>
-            </div>
-            <div class="input-field col s12">
-                <i class="material-icons prefix">vpn_key</i>
-                <input id="icon_vpn_key" type="password" class="validate">
-                <label for="icon_vpn_key">Password</label>
-            </div>
-            <div class="input-field col s12">
-                <button class="btn waves-effect waves-light col s12 blue darken-3" type="submit" name="action">
-                    INGRESAR
-                </button>
-            </div>
+        <hr />
+    </div>
+    <div class="row">
+        <div class="input-field col s12">
+            <i class="material-icons prefix">email</i>
+            <input id="icon_email" type="text" class="validate">
+            <label for="icon_email">Email</label>
         </div>
-    </form>
+        <div class="input-field col s12">
+            <i class="material-icons prefix">vpn_key</i>
+            <input id="icon_vpn_key" type="password" class="validate">
+            <label for="icon_vpn_key">Password</label>
+        </div>
+        <div class="input-field col s12">
+            <button class="btn waves-effect waves-light col s12 blue darken-3 btn-action" type="submit" name="action">
+                INGRESAR
+            </button>
+        </div>
+    </div>
 </div>
