--- a/WebApp/Views/Shared/pv_NavbarUsuario.cshtml
+++ b/WebApp/Views/Shared/pv_NavbarUsuario.cshtml
@@ -1,1 +1,9 @@
-﻿
+﻿<nav>
+    <div class="nav-wrapper blue accent-1">
+        <a href="/Home/Inicio" class="brand-logo">AYUDANDO</a>
+        <ul id="nav-mobile" class="right hide-on-med-and-down">
+            <li><a href="">ACERCA DE</a></li>
+            <li><a href="#" id="btnRegistrarse">SALIR</a></li>
+        </ul>
+    </div>
+</nav>
