--- a/WebApp/Views/Shared/pv_SideNavUsuario.cshtml
+++ b/WebApp/Views/Shared/pv_SideNavUsuario.cshtml
@@ -27,15 +27,17 @@
         <div class="row center-align">
             <p class="white-text">USUARIO</p>
             <hr />
-            <a href="#" class="btn blue accent-3">PERFIL</a>
+            <br />
+            <a href="#" class="btn blue accent-3" id="boton">PERFIL</a>
         </div>
         <div class="row center-align">
             <p class="white-text">NECESIDADES</p>
             <hr />
-            <a href="#" class="btn blue accent-3">PROPIAS</a>
+            <br />
+            <a href="#" class="btn blue accent-3" id="boton">PROPIAS</a>
         </div>
-        <div class="row center-align"><a href="#" class="btn blue accent-3 white-text">OTROS USUARIOS</a></div>
-        <div class="row center-align"><a href="#" class="btn blue accent-3 white-text">CREAR</a></div>
+        <div class="row center-align"><a href="#" class="btn blue accent-3 white-text" id="boton">OTROS USUARIOS</a></div>
+        <div class="row center-align"><a href="#" class="btn blue accent-3 white-text" id="boton">CREAR</a></div>
     </div>
     <div class="col"></div>
 </div>
