--- a/WebApp/Content/lib/materialize/materialize.css
+++ b/WebApp/Content/lib/materialize/materialize.css
@@ -6567,11 +6567,11 @@ textarea.materialize-textarea + label:after, .select-wrapper + label:after {
 }
 
 .input-field .helper-text {
-  position: relative;
-  min-height: 18px;
-  display: block;
-  font-size: 12px;
-  color: rgba(0, 0, 0, 0.54);
+    position: relative;
+    min-height: 18px;
+    display: block;
+    font-size: 12px;
+    color: #F44336;
 }
 
 .input-field .helper-text::after {
