--- a/WebApp/Views/Home/Inicio.cshtml
+++ b/WebApp/Views/Home/Inicio.cshtml
@@ -1,12 +1,12 @@
-﻿
-@{
+﻿@{
+    string action = ViewBag.Action;
     ViewBag.Title = "Inicio";
     Layout = "~/Views/Shared/_AnonimoLayout.cshtml";
 }
 
 <div class="row">
     <div class="col s12 m8 action" id="action">      
-        @Html.Partial("pv_PublicacionMasValorada")       
+        @Html.Partial(action)       
     </div>
     <div class="col s12 m4">
         @Html.Partial("pv_Info")
