--- a/WebApp/Views/Home/Registrarse.cshtml
+++ b/WebApp/Views/Home/Registrarse.cshtml
@@ -1,4 +1,9 @@
-﻿<div class="row">
+﻿@{
+    ViewBag.Title = "Ingresar";
+    Layout = "~/Views/Home/_InicioLayout.cshtml";
+}
+
+<div class="row">
     <form class="col s12 m11 l11">
         <div class="row titulo-action">
             <div class="titulo-inicio blue-text accent-3 center">
