--- a/WebApp/Views/Home/PublicacionMasValorada.cshtml
+++ b/WebApp/Views/Home/PublicacionMasValorada.cshtml
@@ -1,4 +1,10 @@
-﻿<div class="row">
+﻿
+@{
+    ViewBag.Title = "Ingresar";
+    Layout = "~/Views/Home/_InicioLayout.cshtml";
+}
+
+<div class="row">
     <div class="col m12">
         <div class="row">
             <div class="titulo-inicio blue-text accent-3 center">
