Fix boton borrar insumo cargado

--- a/WebApp/Views/Necesidad/CrearNecesidad.cshtml
+++ b/WebApp/Views/Necesidad/CrearNecesidad.cshtml
@@ -60,7 +60,7 @@
                                 <input type="number" class="cantidad-insumo-cargado form-control col s11" readonly />
                             </div>
                             <div class="input-field col s1">
-                                <img class="button-delete-insumo" src="~/Images/Necesidad/Basura.png" width="20" height="20" alt="Borrar Necesidad" />
+                                <img class="button-delete-insumo" src="~/Images/Necesidad/Basura.png" alt="Borrar Necesidad" />
                             </div>
                         </div>
                     </div>
