#Titulo: Registrarse funcionando
#Descripcion

- Fix connection string
- Eliminacion de RegistrarseService
- Modificacion de Datepicker
- Se agrego en el form de registrarse la action post y su ruta

--- a/WebApp/Views/Home/Registrarse.cshtml
+++ b/WebApp/Views/Home/Registrarse.cshtml
@@ -6,7 +6,7 @@
 }
 
 <div class="row">
-    <form class="col s12 m11 l11">
+    <form class="col s12 m11 l11" method="post" action="/Home/Registrarse">
         <div class="row titulo-action">
             <div class="titulo-inicio blue-text accent-3 center">
                 <h5>REGISTRARSE</h5>
