--- a/WebApp/Views/Home/Registrarse.cshtml
+++ b/WebApp/Views/Home/Registrarse.cshtml
@@ -14,35 +14,34 @@
             </div>
             <hr />
         </div>
-            <div class="input-field col s12 m12 l12">
-                <i class="material-icons prefix">email</i>
-                @Html.TextBoxFor(m => m.Email, new { @class = "validate", name = "email", id = "icon_email" })
-                <label for="icon_email">Email</label>
-                <span class="helper-text" data-error="wrong" data-success="formato correcto" data-valmsg-for="Email" data-valmsg-replace="true"></span>
-            </div>
-            <div class="input-field col s12 m12 l12">
-                <i class="material-icons prefix">vpn_key</i>
-                @Html.PasswordFor(m => m.Password, new { @class = "validate", name = "password", id = "icon_vpn_key" })
-                <label for="icon_vpn_key">Password</label>
-                <span class="helper-text" data-error="wrong" data-success="formato correcto" data-valmsg-for="Password" data-valmsg-replace="true"></span>
-            </div>
-            <div class="input-field col s12 m12 l12">
-                <i class="material-icons prefix">vpn_key</i>
-                @Html.PasswordFor(m => m.RepetirPassword, new { @class = "validate", name = "repetirpassword", id = "icon_vpn_key_copy" })
-                <label for="icon_vpn_key_copy">Repita password</label>
-                <span class="helper-text" data-error="wrong" data-success="formato correcto" data-valmsg-for="RepetirPassword" data-valmsg-replace="true"></span>
-            </div>
-            <div class="input-field col s12 m12 l12">
-                <i class="material-icons prefix">date_range</i>
-                @Html.TextBoxFor(m => m.FechaNacimiento, new { @class = "validate datepicker", name = "fechanacimiento", id = "icon_date_range" })
-                <label for="icon_date_range">Fecha de nacimiento</label>
-                <span class="helper-text" data-error="wrong" data-success="formato correcto" data-valmsg-for="FechaNacimiento" data-valmsg-replace="true"></span>
-            </div>
-            <div class="input-field col s12 m12 l12">
-                <button class="btn waves-effect waves-light col s12 blue darken-3 btn-action" type="submit" name="action">
-                    CREAR
-                </button>
-            </div>
+        <div class="input-field col s12 m12 l12">
+            <i class="material-icons prefix">email</i>
+            @Html.TextBoxFor(m => m.Email, new { @class = "validate", name = "email", id = "icon_email" })
+            <label for="icon_email">Email</label>
+            @Html.ValidationMessageFor(m => m.Email, "", new { @class = "helper-text" })
+        </div>
+        <div class="input-field col s12 m12 l12">
+            <i class="material-icons prefix">vpn_key</i>
+            @Html.PasswordFor(m => m.Password, new { @class = "validate", name = "password", id = "icon_vpn_key" })
+            <label for="icon_vpn_key">Password</label>
+            @Html.ValidationMessageFor(m => m.Password, "", new { @class = "helper-text" })
+        </div>
+        <div class="input-field col s12 m12 l12">
+            <i class="material-icons prefix">vpn_key</i>
+            @Html.PasswordFor(m => m.RepetirPassword, new { @class = "validate", name = "repetirpassword", id = "icon_vpn_key_copy" })
+            <label for="icon_vpn_key_copy">Repita password</label>
+            @Html.ValidationMessageFor(m => m.RepetirPassword, "", new {@class = "helper-text" })
+        </div>
+        <div class="input-field col s12 m12 l12">
+            <i class="material-icons prefix">date_range</i>
+            @Html.TextBoxFor(m => m.FechaNacimiento, new { @class = "validate datepicker", name = "fechanacimiento", id = "icon_date_range" })
+            <label for="icon_date_range">Fecha de nacimiento</label>
+            @Html.ValidationMessageFor(m => m.FechaNacimiento, "", new { @class = "helper-text"})
+        </div>
+        <div class="input-field col s12 m12 l12">
+            <button class="btn waves-effect waves-light col s12 blue darken-3 btn-action" type="submit" name="action">
+                CREAR
+            </button>
         </div>
     </form>
 </div>
