Mi perfil: algunas modificaciones en el side bar

--- a/WebApp/Views/Perfil/Inicio.cshtml
+++ b/WebApp/Views/Perfil/Inicio.cshtml
@@ -1,9 +1,19 @@
-﻿<div class="row center-align blue lighten-5" id="sideNavSuperior">
+﻿
+@{
+    ViewBag.Title = "Inicio";
+    Layout = "~/Views/Shared/_UsuarioLayout.cshtml";
+}
+
+<h2>Inicio</h2>
+<!--
+<link href="~/Content/src/sideNavUsuario.css" rel="stylesheet" />
+
+<div class="row center-align grey lighten-2" id="sideNavSuperior">
     <div class="col"></div>
     <div class="col s10">
         <br />
         <div class="row center-align">
-            <img src="~/Images/Perfil/user-icon.png" width="40%" />
+            <img src="~/Images/Perfil/Bulbasaur.png" width="40%" />
         </div>
         <div class="row center-align">
             <p class="blue-text">NOMBRE_USUARIO</p>
@@ -14,7 +24,8 @@
     </div>
     <div class="col"></div>
 </div>
-<div class="row center-align light-blue darken-3" id="sideNavInferior">
+
+<div class="row center-align blue" id="sideNavInferior">
     <div class="col"></div>
     <div class="col s10">
         <div class="row center-align">
@@ -34,3 +45,5 @@
     </div>
     <div class="col"></div>
 </div>
+
+    -->
