--- a/WebApp/Views/Shared/_UsuarioLayout.cshtml
+++ b/WebApp/Views/Shared/_UsuarioLayout.cshtml
@@ -1,6 +1,6 @@
 ﻿
 @{
-    ViewBag.Title = "_UsuarioLayout";
+    ViewBag.Title = "Ayudando";
     Layout = "~/Views/Shared/_BaseLayout.cshtml";
 }
 <div class="row">
